# qmlPrayerTimes

./: .gitignore  CMakeLists.txt  Main.qml  PrayTimesController.qml  PrayerTimes.qml  README.md  main.cpp  qmlPrayerTimesQtDS.qmlproject  qmlPrayerTimesQtDS.qmlproject.qtds
.github/workflows/: test.yml
httpservices/: CMakeLists.txt  Http.qml
qmlPrayerTimesExample/: CMakeLists.txt  Main.qml  main.cpp
qmlPrayerTimesQtDS/: App.qml  Screen01.ui.qml
src/: CMakeLists.txt
src/qmlPrayerTimes/: Http.qml  Main.qml  PrayTimesController.qml  PrayerTimes.qml  qmldir  restService.js
src/qmlPrayerTimes/prayerTimes/: CMakeLists.txt  prayertimeswrapper.cpp  prayertimeswrapper.h
tests/: .github-workflows-example.yml  .gitlab-ci-example.yml  README.md  WORKAROUND.md  run_tests.sh  tst_PrayerTimesWidget.qml  tst_qmlPrayerTimes.cpp
